--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <div class="">
+        <div>
+            <img src="assets/logo.svg" alt="logo">
+        </div>
         <div class="search">
             <input class="search_input" id="search_field" type="text" placeholder="Search by" name="search">
             <!-- <select id="search_type">
