--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Points of Interest</title>
+    <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+    <!-- STYLESHEETS -->
+    <link rel="stylesheet" href="allstyles.css">
+    <link href="tailwind.css" rel="stylesheet">
 </head>
-<body>
-    <div class="">
-        <div>
+<body class="h-screen overflow-y-auto">
+    <div class="p-10">
+<!-- header navigation -->
+        <div class="header flex justify-between">
             <img src="assets/logo.svg" alt="logo">
+            <div class="nav flex">
+                <ul id="nav" class="flex flex-row space-x-6 items-center overflow-hidden">
+                    <li>
+                        <a href="javascript:void(0);" class="hamburger hidden" id="hamburger" onclick="hamburgerMenu()">
+                            <img src="assets/icons/menu.svg" alt="menu" />
+                        </a>
+                    </li>
+                    <li><a href="/about.html" class="text-brand-navy hover:text-brand-light-gray">About</a></li>
+                    <li>
+                        <a href="/login.html">
+                            <svg width="32" height="40" viewBox="0 0 32 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M15.994 26.3498C7.368 26.3498 0 27.7098 0 33.1498C0 38.5918 7.322 39.9998 15.994 39.9998C24.62 39.9998 31.988 38.6418 31.988 33.1998C31.988 27.7578 24.668 26.3498 15.994 26.3498Z" fill="#200E32"/>
+                                <path opacity="0.4" d="M15.994 21.168C21.87 21.168 26.578 16.458 26.578 10.584C26.578 4.71 21.87 0 15.994 0C10.12 0 5.40997 4.71 5.40997 10.584C5.40997 16.458 10.12 21.168 15.994 21.168Z" fill="#506A7F"/>
+                            </svg> 
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        
+
+<!-- search -->
+            <div class="relative py-16 sm:pt-36">
+              <div class="mx-auto max-w-md px-4 sm:max-w-3xl sm:px-6 lg:max-w-7xl lg:px-8">
+                <div class="relative rounded-2xl px-6 py-10 bg-brand-navy overflow-hidden shadow-xl sm:px-12 sm:py-20">
+                  <div aria-hidden="true" class="absolute inset-0 -mt-72 sm:-mt-32 md:mt-0">
+                    <svg class="absolute inset-0 h-full w-full" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 1463 360">
+                      <path class="text-light-navy text-opacity-40" fill="currentColor" d="M-82.673 72l1761.849 472.086-134.327 501.315-1761.85-472.086z" />
+                      <path class="text-light-navy text-opacity-40" fill="currentColor" d="M-217.088 544.086L1544.761 72l134.327 501.316-1761.849 472.086z" />
+                    </svg>
+                  </div>
+                  <div class="relative">
+                    <div class="sm:text-center">
+                      <h2 class="text-3xl font-extrabold text-white tracking-tight sm:text-4xl">
+                        Discover new places to explore
+                      </h2>
+                      <p class="mt-6 mx-auto max-w-3xl text-base sm:text-md lg:text-lg text-brand-light-gray">
+                        Look up information on places to visit whilst on holiday or in your neighbouthood. <br>
+                        World cities, historical sites, countryside areas, recommended restaurants, pubs, bars.
+                      </p>
+                    </div>
+                    <div class="mt-12 sm:mx-auto sm:max-w-lg sm:flex">
+                        <div class="min-w-0 flex-1 sm:flex sm:flex-row justify-between">
+                            <label for="poi_search" class="sr-only">Poi search</label>
+                            <input id="poi_search" type="search" class="block w-full border border-transparent rounded-md sm:rounded-tr-none sm:rounded-br-none px-5 py-3 text-sm md:text-base text-gray-900 placeholder-gray-400 shadow-sm focus:outline-none focus:border-transparent" placeholder="Enter place of interest">
+                            <select id="poi_type" name="poi_type" class="w-full sm:w-auto focus:none outline-none py-3 pl-2 pr-7 border-transparent bg-white text-gray-500 text-sm md:text-base rounded-md sm:rounded-tr-md sm:rounded-br-md sm:rounded-tl-none sm:rounded-bl-none sm:border-l-2 sm:border-brand-light-gray mt-3 sm:mt-0">
+                                <option>Region</option>
+                                <option>Country</option>
+                                <option>Type</option>
+                            </select>
+                        </div>
+                      <div class="mt-3 sm:mt-0 sm:ml-3">
+                        <button type="submit" class="block w-full rounded-md border border-transparent px-5 py-3 bg-brand-orange text-base text-white shadow hover:bg-opacity-70 focus:outline-none focus:ring focus:ring-brand-orange focus:ring-offset focus:ring-offset-brand-orange sm:px-10">Search</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+<!-- stats -->
+            <div class="flex flex-col sm:flex-row justify-center space-between space-y-4 sm:space-y-0 sm:space-x-20 pt-4 sm:pt-10">
+                <div class="flex flex-col space-y-1">
+                    <h2 class="text-3xl sm:text-5xl font-extrabold text-brand-navy self-center">874</h2>
+                    <p class="text-md font-medium text-cadet-blue">Places of interest</p>
+                </div>
+                <div class="flex flex-col space-y-1 border-l-4 border-brand-navy pl-20">
+                    <h2 class="text-3xl sm:text-5xl font-extrabold text-brand-navy self-center">19</h2>
+                    <p class="text-md font-medium text-cadet-blue">Regions</p>
+                </div>
+                <div class="flex flex-col space-y-1 border-l-4 border-brand-navy pl-20">
+                    <h2 class="text-3xl sm:text-5xl font-extrabold text-brand-navy self-center">90</h2>
+                    <p class="text-md font-medium text-cadet-blue">Restaurants</p>
+                </div>
+            </div>
+    </div>
+    <!-- FOOTER -->
+    <div class="bg-light-navy w-full absolute  fixed bottom-0 left-0 px-10 py-3">
+        <p class="text-white text-sm">©️ 2021 <a href="https://katwlodarczyk.com" class="hover:underline">Kat Wlodarczyk</a>. All rights reserved.</p>
     </div>
     <script src="index.js"></script>
 </body>
