--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="allstyles.css">
     <link href="tailwind.css" rel="stylesheet">
 </head>
-<body class="">
+<body class="font-inter">
     <!-- header navigation -->
     <div class="px-4 pt-6 sm:px-16 sm:pt-10 pb-0 header flex justify-between">
         <img src="assets/logo.svg" alt="logo">
@@ -80,15 +80,15 @@
             <div class="flex flex-row justify-center space-between space-x-8 sm:space-x-20 pt-4 sm:pt-10 text-center">
                 <div class="flex flex-col space-y-1">
                     <h2 class="text-xl sm:text-5xl font-extrabold text-brand-navy self-center">874</h2>
-                    <p class="text-xs sm:text-md font-medium text-cadet-blue">Places of interest</p>
+                    <p class="text-base sm:text-lg font-medium text-cadet-blue">Places of interest</p>
                 </div>
                 <div class="flex flex-col space-y-1 border-l-4 border-brand-navy pl-6 sm:pl-20">
                     <h2 class="text-xl sm:text-5xl font-extrabold text-brand-navy self-center">19</h2>
-                    <p class="text-xs sm:text-md font-medium text-cadet-blue">Regions</p>
+                    <p class="text-base sm:text-lg font-medium text-cadet-blue">Regions</p>
                 </div>
                 <div class="flex flex-col space-y-1 border-l-4 border-brand-navy pl-6 sm:pl-20">
                     <h2 class="text-xl sm:text-5xl font-extrabold text-brand-navy self-center">90</h2>
-                    <p class="text-xs sm:text-md font-medium text-cadet-blue">Restaurants</p>
+                    <p class="text-base sm:text-lg font-medium text-cadet-blue">Restaurants</p>
                 </div>
             </div>
     </div>
