added stat counter

--- a/public/index.html
+++ b/public/index.html
@@ -79,15 +79,15 @@
 <!-- stats -->
             <div class="flex flex-row justify-center space-between space-x-8 sm:space-x-20 pt-4 sm:pt-10 text-center">
                 <div class="flex flex-col space-y-1">
-                    <h2 class="text-xl sm:text-5xl font-extrabold text-brand-navy self-center">874</h2>
+                    <h2 id="statAll" class="text-xl sm:text-5xl font-extrabold text-brand-navy self-center">--</h2>
                     <p class="text-base sm:text-lg font-medium text-cadet-blue">Places of interest</p>
                 </div>
-                <div class="flex flex-col space-y-1 border-l-4 border-brand-navy pl-6 sm:pl-20">
-                    <h2 class="text-xl sm:text-5xl font-extrabold text-brand-navy self-center">19</h2>
+                <div class="stat flex flex-col space-y-1 border-l-4 border-brand-navy pl-6 sm:pl-20">
+                    <h2 id="statRegions" class="text-xl sm:text-5xl font-extrabold text-brand-navy self-center">--</h2>
                     <p class="text-base sm:text-lg font-medium text-cadet-blue">Regions</p>
                 </div>
-                <div class="flex flex-col space-y-1 border-l-4 border-brand-navy pl-6 sm:pl-20">
-                    <h2 class="text-xl sm:text-5xl font-extrabold text-brand-navy self-center">90</h2>
+                <div class="stat flex flex-col space-y-1 border-l-4 border-brand-navy pl-6 sm:pl-20">
+                    <h2 id="statRestaurants" class="text-xl sm:text-5xl font-extrabold text-brand-navy self-center">--</h2>
                     <p class="text-base sm:text-lg font-medium text-cadet-blue">Restaurants</p>
                 </div>
             </div>
