--- a/public/index.html
+++ b/public/index.html
@@ -15,16 +15,14 @@
     <link href="tailwind.css" rel="stylesheet">
 </head>
 <body class="font-inter">
+  <button onclick="toTopFunction()" id="toTopBtn" class="hidden fixed bottom-16 right-4 z-50 opacity-70 hover:opacity-100 focus:outline-none" title="Go to top">
+      <img src="assets/icons/arrow-up.svg" alt="Go to top" />
+  </button>
     <!-- header navigation -->
-    <div class="px-4 pt-6 sm:px-16 sm:pt-10 pb-0 header flex justify-between">
-        <img src="assets/logo.svg" alt="logo">
-        <div class="nav flex">
-            <ul id="nav" class="flex flex-row space-x-6 items-center overflow-hidden">
-                <li>
-                    <a href="javascript:void(0);" class="hamburger hidden" id="hamburger" onclick="hamburgerMenu()">
-                        <img src="assets/icons/menu.svg" alt="menu" />
-                    </a>
-                </li>
+    <div class="px-4 pt-6 sm:px-16 sm:pt-10 pb-0 header flex flex-col sm:flex-row justify-between">
+        <img class="pb-4 sm:pb-0" src="assets/logo.svg" alt="logo">
+        <div class="nav flex self-center">
+            <ul id="nav" class="flex flex-row space-x-6 items-center">
                 <li><a href="/about.html" class="text-brand-navy hover:text-brand-light-gray">About</a></li>
                 <li>
                     <a href="/login.html">
