--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="allstyles.css">
     <link href="tailwind.css" rel="stylesheet">
-</head>
+    <link rel='stylesheet prefetch' href='https://unpkg.com/izitoast/dist/css/iziToast.min.css'>
+    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'> 
+
+  </head>
 <body class="font-inter">
   <button onclick="toTopFunction()" id="toTopBtn" class="hidden fixed bottom-16 right-4 z-50 opacity-70 hover:opacity-100 focus:outline-none" title="Go to top">
       <img src="assets/icons/arrow-up.svg" alt="Go to top" />
@@ -67,7 +70,7 @@
                             </select>
                         </div>
                       <div class="mt-3 sm:mt-0 sm:ml-3">
-                        <button type="submit" id="seachButton" class="search-button block w-full rounded-md border border-transparent px-5 py-3 bg-brand-orange text-base text-white shadow hover:bg-opacity-90 focus:outline-none focus:ring focus:ring-brand-orange focus:ring-offset focus:ring-offset-brand-orange sm:px-10">Search</button>
+                        <button type="submit" id="searchButton" class="search-button block w-full rounded-md border border-transparent px-5 py-3 bg-brand-orange text-base text-white shadow hover:bg-opacity-90 focus:outline-none focus:ring focus:ring-brand-orange focus:ring-offset focus:ring-offset-brand-orange sm:px-10">Search</button>
                       </div>
                     </div>
                   </div>
@@ -104,6 +107,7 @@
     <div class="bg-light-navy w-full fixed bottom-0 left-0 px-4 py-3">
         <p class="text-white text-sm">©️ <span id="year"></span> <a href="https://katwlodarczyk.com" class="hover:underline">Kat Wlodarczyk</a>. All rights reserved.</p>
     </div>
+    <script src='https://unpkg.com/izitoast/dist/js/iziToast.min.js'></script>
     <script src="index.js"></script>
 </body>
 </html>
