--- a/public/addNew.html
+++ b/public/addNew.html
@@ -64,9 +64,9 @@
                 </div>
             </div>
 
-            <div class="px-4 sm:px-10 pb-10 flex flex-col justify-between pt-11">
+            <div class="px-4 sm:px-10 py-6 flex flex-col justify-between">
 <!-- SEARCH RESULTS -->
-                <div id="resultsContainer" class="py-10 flex flex-col">
+                <div id="resultsContainer" class="flex flex-col">
                     <div id="results" class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
                     </div>
                 </div>
