--- a/public/addNew.html
+++ b/public/addNew.html
@@ -74,7 +74,7 @@
 <!-- Add new  -->
                 <div class="flex flex-row justify-between">
                     <div class="w-full sm:w-1/2">
-                        <form action="#" method="POST">
+                       <div>
                             <div class="py-6 px-4 space-y-6 sm:p-6">
                                 <div>
                                     <h3 class="text-lg leading-6 font-medium text-brand-navy">Add a new point of interest</h3>
@@ -139,7 +139,7 @@
                                     </button>
                                 </div>
                             </div>
-                        </form>
+                        </div>
                     </div>
                     <div class="hidden sm:block sm:w-1/2 self-center">
                         <img class="mx-auto" src="./assets/Manfindinglocationinmap.png" alt="decorative image" />
