trying to add map to results

--- a/public/addNew.html
+++ b/public/addNew.html
@@ -14,7 +14,11 @@
     <link rel="stylesheet" href="allstyles.css">
     <link href="tailwind.css" rel="stylesheet">
     <link rel='stylesheet prefetch' href='https://unpkg.com/izitoast/dist/css/iziToast.min.css'>
-    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'> 
+    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+<!-- LEAFLET -->
+    <script src='https://unpkg.com/leaflet@1.7.1/dist/leaflet.js'></script>
+    <link rel='stylesheet' href='https://unpkg.com/leaflet@1.7.1/dist/leaflet.css'/>
+    
 
   </head>
 <body class="font-inter">
