--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,10 @@
     <link rel="stylesheet" href="allstyles.css">
     <link href="tailwind.css" rel="stylesheet">
     <link rel='stylesheet prefetch' href='https://unpkg.com/izitoast/dist/css/iziToast.min.css'>
-    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'> 
+    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+  <!-- LEAFLET -->
+    <script src='https://unpkg.com/leaflet@1.7.1/dist/leaflet.js'></script>
+    <link rel='stylesheet' href='https://unpkg.com/leaflet@1.7.1/dist/leaflet.css'/>
 
   </head>
 <body class="font-inter">
@@ -112,7 +115,7 @@
     </div>
 
     <!-- FOOTER -->
-    <div class="bg-light-navy w-full fixed bottom-0 left-0 px-4 py-3">
+    <div class="bg-light-navy w-full fixed bottom-0 left-0 px-4 py-3 z-50">
         <p class="text-white text-sm">©️ <span id="year"></span> <a href="https://katwlodarczyk.com" class="hover:underline">Kat Wlodarczyk</a>. All rights reserved.</p>
     </div>
     <script src='https://unpkg.com/izitoast/dist/js/iziToast.min.js'></script>
