--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,9 @@
 
              <!-- SEARCH RESULTS -->
     <div id="resultsContainer" class="py-10 flex flex-col">
+      <div id="mapResults">
+
+      </div>
       <div id="results" class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
         
       </div>
