--- a/public/addNew.html
+++ b/public/addNew.html
@@ -10,6 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+<!-- FAVICON -->
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 <!-- STYLESHEETS -->
     <link rel="stylesheet" href="allstyles.css">
     <link href="tailwind.css" rel="stylesheet">
@@ -42,9 +48,9 @@
               </li>
                 <li><a href="/about.html" class="text-brand-navy hover:text-brand-light-gray">About</a></li>
                 <li>
-                    <a href="/login.html">
-                        <svg width="32" height="40" viewBox="0 0 32 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M15.994 26.3498C7.368 26.3498 0 27.7098 0 33.1498C0 38.5918 7.322 39.9998 15.994 39.9998C24.62 39.9998 31.988 38.6418 31.988 33.1998C31.988 27.7578 24.668 26.3498 15.994 26.3498Z" fill="#200E32"/>
+                    <a href="/login" title="Login">
+                        <svg class="fill-current text-brand-navy hover:text-light-navy" width="32" height="40" viewBox="0 0 32 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M15.994 26.3498C7.368 26.3498 0 27.7098 0 33.1498C0 38.5918 7.322 39.9998 15.994 39.9998C24.62 39.9998 31.988 38.6418 31.988 33.1998C31.988 27.7578 24.668 26.3498 15.994 26.3498Z" fill="fill-current"/>
                             <path opacity="0.4" d="M15.994 21.168C21.87 21.168 26.578 16.458 26.578 10.584C26.578 4.71 21.87 0 15.994 0C10.12 0 5.40997 4.71 5.40997 10.584C5.40997 16.458 10.12 21.168 15.994 21.168Z" fill="#506A7F"/>
                         </svg> 
                     </a>
