--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Points of Interest</title>
+    <title>Login - Points of Interest</title>
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap" rel="stylesheet">
@@ -32,13 +32,13 @@
   </button>
     <!-- header navigation -->
     <div class="px-4 pt-6 sm:px-16 sm:pt-10 pb-0 header flex flex-col sm:flex-row justify-between">
-        <a class="flex justify-center sm:justify-start" href="/">
-            <img class="pb-4 sm:pb-0" src="assets/logo.svg" alt="logo">
-        </a>
+      <a class="flex justify-center sm:justify-start" href="/">
+        <img class="pb-4 sm:pb-0" src="assets/logo.svg" alt="logo">
+      </a>
         <div class="nav flex self-center">
             <ul id="nav" class="flex flex-row space-x-6 items-center">
               <li>
-                <a href="/addNew" class="group cursor-pointer transition ease-in-out inline-flex items-center px-4 py-2 border border-transparent shadow text-xs sm:text-base font-medium rounded-md text-brand-navy bg-brand-light-gray hover:bg-brand-navy hover:text-brand-light-gray focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-light-gray">
+                <a href="/addNew" class="group cursor-pointer transition ease-in-out inline-flex items-center px-4 py-2 border border-transparent shadow text-base font-medium rounded-md text-brand-navy bg-brand-light-gray hover:bg-brand-navy hover:text-brand-light-gray focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-light-gray">
                     <svg class="-ml-1 mr-3 h-5 w-5 text-brand-navy group-hover:text-brand-light-gray fill-current" width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                       <path d="M14.6409 9.41667H9.49904V14.514C9.49904 15.3347 8.8279 16 8 16C7.1721 16 6.50096 15.3347 6.50096 14.514V9.41667H1.35909C0.586845 9.3374 0 8.69228 0 7.92264C0 7.153 0.586845 6.50789 1.35909 6.42861H6.48484V1.34731C6.56481 0.581757 7.21557 0 7.99194 0C8.76832 0 9.41907 0.581757 9.49904 1.34731V6.42861H14.6409C15.4132 6.50789 16 7.153 16 7.92264C16 8.69228 15.4132 9.3374 14.6409 9.41667Z" fill="fill-current"/>
                       </svg>
@@ -59,15 +59,47 @@
     </div>
     <div class="px-4 sm:px-10 pb-10">
         <div class="sm:mx-auto sm:w-full sm:max-w-md flex items-center justify-center pt-40">
-            <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10 flex flex-col justify-center">
-                <img src="./assets/backpack.png" alt="decorative image"/>
-                <h1 class="text-brand-navy font-extrabold text-2xl sm:text-3xl pt-6 pb-1 self-center">Where are we?</h1>  
-                <p class="text-light-navy self-center pb-6 text-center">Something went wrong and we've got lost.</p>
-                <div>
-                    <a href="/"  class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-brand-navy hover:bg-brand-light-gray hover:text-brand-navy transition ease-in-out focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-light-gray">
-                        Go back to the main page
-                    </a>
-                </div>
+            <div class="bg-brand-navy py-8 px-4 shadow sm:rounded-lg sm:px-10">
+                <h2 class="mb-6 text-center text-3xl font-extrabold text-white">
+                    Log in to your account
+                </h2>
+                <form class="space-y-6" action="#" method="POST">
+                    <div>
+                        <label for="email" class="block text-sm font-medium text-white">
+                        Email address
+                        </label>
+                        <div class="mt-1">
+                        <input id="email" name="email" type="email" autocomplete="email" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-brand-light-gray focus:border-brand-light-gray sm:text-sm">
+                        </div>
+                    </div>
+                    <div>
+                        <label for="password" class="block text-sm font-medium text-white">
+                        Password
+                        </label>
+                        <div class="mt-1">
+                            <input id="password" name="password" type="password" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-brand-light-gray focus:border-brand-light-gray sm:text-sm">
+                        </div>
+                    </div>
+                    <div class="flex items-center justify-between">
+                        <div class="flex items-center relative">
+                            <input id="remember_me" name="remember_me" type="checkbox" class="h-4 w-4 text-white focus:ring-brand-light-gray border-gray-300 rounded">
+                            <span class="checkmark"></span>
+                            <label for="remember_me" class="ml-2 block text-sm text-white">
+                                Remember me
+                            </label>
+                        </div>
+                        <div class="text-sm">
+                            <a href="#" class="font-medium text-white underline hover:text-brand-light-gray">
+                                Forgot your password?
+                            </a>
+                        </div>
+                    </div>
+                    <div>
+                        <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-brand-orange hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-orange">
+                            Sign in
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
