--- a/public/login.html
+++ b/public/login.html
@@ -63,13 +63,13 @@
                 <h2 class="mb-6 text-center text-3xl font-extrabold text-white">
                     Log in to your account
                 </h2>
-                <form class="space-y-6" action="#" method="POST">
+                <div class="space-y-6">
                     <div>
-                        <label for="email" class="block text-sm font-medium text-white">
-                        Email address
+                        <label for="Username" class="block text-sm font-medium text-white">
+                        Username
                         </label>
                         <div class="mt-1">
-                        <input id="email" name="email" type="email" autocomplete="email" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-brand-light-gray focus:border-brand-light-gray sm:text-sm">
+                        <input id="username" name="Username" type="text" class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-brand-light-gray focus:border-brand-light-gray sm:text-sm">
                         </div>
                     </div>
                     <div>
@@ -77,10 +77,10 @@
                         Password
                         </label>
                         <div class="mt-1">
-                            <input id="password" name="password" type="password" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-brand-light-gray focus:border-brand-light-gray sm:text-sm">
+                            <input id="password" name="password" type="password" class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-brand-light-gray focus:border-brand-light-gray sm:text-sm">
                         </div>
                     </div>
-                    <div class="flex items-center justify-between">
+                <!-- <div class="flex items-center justify-between">
                         <div class="flex items-center relative">
                             <input id="remember_me" name="remember_me" type="checkbox" class="h-4 w-4 text-white focus:ring-brand-light-gray border-gray-300 rounded">
                             <span class="checkmark"></span>
@@ -93,13 +93,13 @@
                                 Forgot your password?
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     <div>
-                        <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-brand-orange hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-orange">
+                        <button type="submit" id="loginButton" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-brand-orange hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-orange">
                             Sign in
                         </button>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
