added about page

--- a/public/about.html
+++ b/public/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Points of Interest</title>
+    <title>About the app - Points of Interest</title>
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap" rel="stylesheet">
@@ -62,18 +62,25 @@
             </ul>
         </div>
     </div>
-    <div class="px-4 sm:px-10 pb-10">
-        <div class="sm:mx-auto sm:w-full sm:max-w-md flex items-center justify-center pt-40">
-            <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10 flex flex-col justify-center">
-                <img src="./assets/backpack.png" alt="decorative image"/>
-                <h1 class="text-brand-navy font-extrabold text-2xl sm:text-3xl pt-6 pb-1 self-center">Where are we?</h1>  
-                <p class="text-light-navy self-center pb-6 text-center">Something went wrong and we've got lost.</p>
-                <div>
-                    <a href="/"  class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-brand-navy hover:bg-brand-light-gray hover:text-brand-navy transition ease-in-out focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-light-gray">
-                        Go back to the main page
-                    </a>
-                </div>
-            </div>
+    <div class="mx-16 pt-10 sm:pt-32 flex flex-row justify-between">
+        <div class="hidden sm:flex max-w-2xl px-16 w-2/3">
+            <img src="./assets/personwithpoints.png" alt="decorative image"/>
+        </div>
+        <div class="max-w-md sm:max-w-2xl pt-0 sm:pt-12">
+          <h2 class="text-3xl text-brand-navy font-extrabold tracking-tight sm:text-4xl">
+            On a mission to collect great places
+          </h2>
+          <div class="mt-6 text-brand-navy text-base leading-7 space-y-6">
+            <p>
+              The planet we live on is full of amaizng wonders, and this project collects them all. Everyone can contribute and be the part of the largest database for great points on the map of our world. 
+            </p>
+            <p>
+              <B>Search for the places to explore.</B> It doesn't matter if it's million kilometers from your home, or just around the corner. Places are waiting to be found!
+            </p>
+            <p>
+              <b>Share your favourites with others.</b> You can also recommend the points of interest that already exist, or write a review of your visit!
+            </p>
+          </div>  
         </div>
     </div>
 
