--- a/public/addNew.html
+++ b/public/addNew.html
@@ -38,15 +38,14 @@
         </a>
         <div class="nav flex self-center">
             <ul id="nav" class="flex flex-row space-x-6 items-center">
-              <li>
-                <a href="/addNew" class="group inline-flex items-center px-4 py-2 border border-transparent shadow text-base font-medium rounded-md text-brand-navy bg-brand-light-gray hover:bg-brand-navy hover:text-brand-light-gray focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-light-gray">
-                  <svg class="-ml-1 mr-3 h-5 w-5 text-brand-navy group-hover:text-brand-light-gray fill-current" width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M14.6409 9.41667H9.49904V14.514C9.49904 15.3347 8.8279 16 8 16C7.1721 16 6.50096 15.3347 6.50096 14.514V9.41667H1.35909C0.586845 9.3374 0 8.69228 0 7.92264C0 7.153 0.586845 6.50789 1.35909 6.42861H6.48484V1.34731C6.56481 0.581757 7.21557 0 7.99194 0C8.76832 0 9.41907 0.581757 9.49904 1.34731V6.42861H14.6409C15.4132 6.50789 16 7.153 16 7.92264C16 8.69228 15.4132 9.3374 14.6409 9.41667Z" fill="fill-current"/>
-                    </svg>
-                    Add new
-                </a>
-              </li>
-                <li><a href="/about.html" class="text-brand-navy hover:text-brand-light-gray">About</a></li>
+                <li>
+                    <a href="/addNew" class="group inline-flex items-center px-4 py-2 border border-transparent shadow text-base font-medium rounded-md text-brand-navy bg-brand-light-gray hover:bg-brand-navy hover:text-brand-light-gray focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-light-gray">
+                    <svg class="-ml-1 mr-3 h-5 w-5 text-brand-navy group-hover:text-brand-light-gray fill-current" width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.6409 9.41667H9.49904V14.514C9.49904 15.3347 8.8279 16 8 16C7.1721 16 6.50096 15.3347 6.50096 14.514V9.41667H1.35909C0.586845 9.3374 0 8.69228 0 7.92264C0 7.153 0.586845 6.50789 1.35909 6.42861H6.48484V1.34731C6.56481 0.581757 7.21557 0 7.99194 0C8.76832 0 9.41907 0.581757 9.49904 1.34731V6.42861H14.6409C15.4132 6.50789 16 7.153 16 7.92264C16 8.69228 15.4132 9.3374 14.6409 9.41667Z" fill="fill-current"/>
+                        </svg>
+                        Add new
+                    </a>
+                </li>
                 <li>
                     <div id="loginDiv">
                         <a id="loginIcon" href="/login" title="Login">
@@ -172,8 +171,9 @@
                 </div>
             </div>
     <!-- FOOTER -->
-    <div class="bg-light-navy w-full fixed bottom-0 left-0 px-4 py-3 z-50">
-        <p class="text-white text-sm">©️ <span id="year"></span> <a href="https://katwlodarczyk.com" class="hover:underline">Kat Wlodarczyk</a>. All rights reserved.</p>
+    <div class="bg-light-navy w-full fixed bottom-0 left-0 px-4 py-3 z-50 flex justify-between">
+        <p class="text-white text-sm">©️ <span id="year"></span> <a href="https://katwlodarczyk.com" target="_blank" class="hover:underline">Kat Wlodarczyk</a>. All rights reserved.</p>
+        <a href="/about" class="text-white hover:text-brand-light-gray text-sm">Learn more about the app</a>
     </div>
     <script src='https://unpkg.com/izitoast/dist/js/iziToast.min.js'></script>
     <script src="./index.js"></script>
