fixed responsiveness + login

--- a/public/about.html
+++ b/public/about.html
@@ -62,12 +62,12 @@
             </ul>
         </div>
     </div>
-    <div class="mx-16 pt-10 sm:pt-32 flex flex-row justify-between">
-        <div class="hidden sm:flex max-w-2xl px-16 w-2/3">
+    <div class="mx-5 md:mx-10 xl:mx-16 pt-10 sm:pt-32 flex flex-col md:flex-row justify-between items-center mb-20 md:mb-0">
+        <div class="flex order-last md:order-first pt-6 xl:pt-0 max-w-2xl px-16 md:px-0 md:pr-10 xl:pr-16 lg:w-2/3">
             <img src="./assets/personwithpoints.png" alt="decorative image"/>
         </div>
-        <div class="max-w-md sm:max-w-2xl pt-0 sm:pt-12">
-          <h2 class="text-3xl text-brand-navy font-extrabold tracking-tight sm:text-4xl">
+        <div class="max-w-md sm:max-w-2xl xl:pt-12">
+          <h2 class="text-3xl text-brand-navy font-extrabold tracking-tight sm:text-4xl text-center xl:text-left">
             On a mission to collect great places
           </h2>
           <div class="mt-6 text-brand-navy text-base leading-7 space-y-6">
