--- a/public/addNew.html
+++ b/public/addNew.html
@@ -65,7 +65,7 @@
     </div>
 <!-- search -->
             <div class="relative py-10 mt-10 bg-brand-navy">
-                <div class="search sm:mx-auto sm:max-w-lg sm:flex">
+                <div class="search sm:mx-auto sm:max-w-lg sm:flex px-5 sm:px-0">
                     <div class="min-w-0 flex-1 sm:flex sm:flex-row justify-between">
                         <label for="poiField" class="sr-only">Poi search</label>
                         <input id="poiField" type="search" class="search-input block w-full border border-transparent rounded-md sm:rounded-tr-none sm:rounded-br-none px-5 py-3 text-sm md:text-base text-gray-900 placeholder-gray-400 shadow-sm focus:outline-none focus:border-transparent" placeholder="Enter the name of">
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="px-4 sm:px-10 py-6 flex flex-col justify-between">
+            <div class="px-4 sm:px-10 py-6 mb-10 flex flex-col justify-between">
 <!-- SEARCH RESULTS -->
             <div id="resultsContainer" class="flex flex-col">
                 <div id="mapResults">
@@ -94,7 +94,7 @@
 
 <!-- Add new  -->
                 <div class="flex flex-row justify-between">
-                    <div class="w-full sm:w-1/2">
+                    <div class="w-full md:w-1/2">
                        <div>
                             <div class="py-6 px-4 sm:p-6">
                                 <div>
@@ -165,7 +165,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="hidden sm:block sm:w-1/2 self-center">
+                    <div class="hidden md:block md:w-1/2 self-center">
                         <img class="mx-auto" src="./assets/Manfindinglocationinmap.png" alt="decorative image" />
                     </div>
                 </div>
