--- a/public/login.html
+++ b/public/login.html
@@ -63,8 +63,8 @@
         </div>
     </div>
     <div class="px-4 sm:px-10 pb-10">
-        <div class="sm:mx-auto sm:w-full sm:max-w-md flex items-center justify-center pt-40">
-            <div class="bg-brand-navy py-8 px-4 shadow sm:rounded-lg sm:px-10">
+        <div class="sm:mx-auto sm:w-full sm:max-w-md flex items-center justify-center pt-20 sm:pt-40">
+            <div class="bg-brand-navy py-8 px-4 shadow rounded-lg sm:px-10">
                 <h2 class="mb-6 text-center text-3xl font-extrabold text-white">
                     Log in to your account
                 </h2>
@@ -85,20 +85,6 @@
                             <input id="password" name="password" type="password" class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-brand-light-gray focus:border-brand-light-gray sm:text-sm">
                         </div>
                     </div>
-                <!-- <div class="flex items-center justify-between">
-                        <div class="flex items-center relative">
-                            <input id="remember_me" name="remember_me" type="checkbox" class="h-4 w-4 text-white focus:ring-brand-light-gray border-gray-300 rounded">
-                            <span class="checkmark"></span>
-                            <label for="remember_me" class="ml-2 block text-sm text-white">
-                                Remember me
-                            </label>
-                        </div>
-                        <div class="text-sm">
-                            <a href="#" class="font-medium text-white underline hover:text-brand-light-gray">
-                                Forgot your password?
-                            </a>
-                        </div>
-                    </div> -->
                     <div>
                         <button type="submit" id="loginButton" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-brand-orange hover:opacity-90 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-orange">
                             Sign in
