--- a/public/404.html
+++ b/public/404.html
@@ -36,13 +36,15 @@
             <img class="pb-4 sm:pb-0" src="assets/logo.svg" alt="logo">
         </a>
         <div class="nav flex self-center">
-            <ul id="nav" class="flex flex-row space-x-6 items-center">
+            <ul id="nav" class="flex flex-row space-x-4 md:space-x-6 items-center">
                 <li>
-                    <a href="/addNew" class="group cursor-pointer transition ease-in-out inline-flex items-center px-4 py-2 border border-transparent shadow text-xs sm:text-base font-medium rounded-md text-brand-navy bg-brand-light-gray hover:bg-brand-navy hover:text-brand-light-gray focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-light-gray">
+                    <a href="/addNew" class="group cursor-pointer transition ease-in-out inline-flex items-center px-4 py-2 border border-transparent shadow text-sm md:text-base font-medium rounded-md text-brand-navy bg-brand-light-gray hover:bg-brand-navy hover:text-brand-light-gray focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-brand-light-gray">
                         <svg class="-ml-1 mr-3 h-5 w-5 text-brand-navy group-hover:text-brand-light-gray fill-current" width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M14.6409 9.41667H9.49904V14.514C9.49904 15.3347 8.8279 16 8 16C7.1721 16 6.50096 15.3347 6.50096 14.514V9.41667H1.35909C0.586845 9.3374 0 8.69228 0 7.92264C0 7.153 0.586845 6.50789 1.35909 6.42861H6.48484V1.34731C6.56481 0.581757 7.21557 0 7.99194 0C8.76832 0 9.41907 0.581757 9.49904 1.34731V6.42861H14.6409C15.4132 6.50789 16 7.153 16 7.92264C16 8.69228 15.4132 9.3374 14.6409 9.41667Z" fill="fill-current"/>
-                        </svg>
-                        Add new
+                          <path d="M14.6409 9.41667H9.49904V14.514C9.49904 15.3347 8.8279 16 8 16C7.1721 16 6.50096 15.3347 6.50096 14.514V9.41667H1.35909C0.586845 9.3374 0 8.69228 0 7.92264C0 7.153 0.586845 6.50789 1.35909 6.42861H6.48484V1.34731C6.56481 0.581757 7.21557 0 7.99194 0C8.76832 0 9.41907 0.581757 9.49904 1.34731V6.42861H14.6409C15.4132 6.50789 16 7.153 16 7.92264C16 8.69228 15.4132 9.3374 14.6409 9.41667Z" fill="fill-current"/>
+                          </svg>
+                          <span>
+                            Add new
+                        </span>
                     </a>
                 </li>
                 <li>
