--- a/public/index.html
+++ b/public/index.html
@@ -50,10 +50,10 @@
               <li>
                 <div id="loginDiv">
                   <a id="loginIcon" href="/login" title="Login">
-                      <svg class="fill-current text-brand-navy hover:text-light-navy" width="32" height="40" viewBox="0 0 32 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M15.994 26.3498C7.368 26.3498 0 27.7098 0 33.1498C0 38.5918 7.322 39.9998 15.994 39.9998C24.62 39.9998 31.988 38.6418 31.988 33.1998C31.988 27.7578 24.668 26.3498 15.994 26.3498Z" fill="fill-current"/>
-                          <path opacity="0.4" d="M15.994 21.168C21.87 21.168 26.578 16.458 26.578 10.584C26.578 4.71 21.87 0 15.994 0C10.12 0 5.40997 4.71 5.40997 10.584C5.40997 16.458 10.12 21.168 15.994 21.168Z" fill="#506A7F"/>
-                      </svg> 
+                    <svg class="fill-current text-brand-navy hover:text-light-navy" width="32" height="37" viewBox="0 0 32 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M15.994 23.168C7.368 23.168 0 24.528 0 29.968C0 35.41 7.322 36.818 15.994 36.818C24.62 36.818 31.988 35.46 31.988 30.018C31.988 24.576 24.668 23.168 15.994 23.168Z" fill="#200E32"/>
+                      <path opacity="0.4" d="M15.9942 21.168C21.8702 21.168 26.5782 16.458 26.5782 10.584C26.5782 4.71 21.8702 0 15.9942 0C10.1202 0 5.41016 4.71 5.41016 10.584C5.41016 16.458 10.1202 21.168 15.9942 21.168Z" fill="#506A7F"/>
+                    </svg>
                   </a>
                   <div class="flex space-x-4">
                       <p id="loggedAs" class="text-brand-navy"></p>
